      + "[System Error]opendir failed:%s. The \"%s\" directory can't be opened", dir
      + "[System Error]utime failed:%s. The access and modification times of the \"%s\" file can't be changed"
    * Unified an exception message
      [Before]
      in this system
      [After]
      on this system
0.38 2022-02-09
  [Bug Fix]
    * Fixed the bug that the fwrite and fread method in the Sys::IO class throw an exception in a wrong condition.
    
0.37 2022-02-08
  [Prerequirement Changes]
    * SPVM 0.9691+ is needed.
0.3601 2022-02-06
  [Test Bug Fix]
    * Fixed the following testing bug in the Sys::FileTest class
      
      https://github.com/yuki-kimoto/SPVM-Sys/issues/23
      
0.36 2022-02-03
  [Bug Fix]
    * Fixed the bug that many methods in the Sys::FileTest class doesn't work well.
      -r
      -w
      -x
      -o
      -R
      -W
      -X
      -O
    * Fixed the bug that Sys::FileTest doesn't work well on Windows.
      -r is the same as the -R
      -w is the same as the -W
      -x is the same as the -X
      -o is the same as the -O
  [Incompatible Changes]
    The d method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The f method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The g method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The k method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The l method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The b method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The o method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The p method in the FileTest doesn't throw an exception when the directori doesn't exist.
    The O method in the FileTest doesn't throw an exception when the directori doesn't exist.
    
0.35 2022-01-30
  [Test Bug Fix]